--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.8.95",
     "core-js": "^3.4.4",
     "firebase": "^7.7.0",
     "register-service-worker": "^1.6.2",
